# Rust-Invoicer

./: .gitignore  Cargo.toml  README.md  companies.json  data.json  invoicer.db  partners.json  rpc.json  services.json  structure.json
src/: main.rs
src/gui/: mod.rs
src/invoicer/: mod.rs
src/render/: mod.rs
src/rpc/: mod.rs
