[package]
name = "rust_pdf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
printpdf = "0.5.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4.23"
egui = "0.20.1"
eframe = "0.20.1"
json = "0.12.4"
pdfium-render = "0.7.27"
image = "0.24.5"
egui_extras = "0.20.0"
rand = "0.8.5"
discord-rpc-client = "0.3.0"
