[package]
name = "rust_pdf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
printpdf = { version = "0.5.3", feature=["embedded_images"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4.23"
egui = "0.22.0"
eframe = "0.22.0"
json = "0.12.4"
pdfium-render = "0.8.1"
image = "0.24.5"
egui_extras = "0.22.0"
rand = "0.8.5"
tokio = { version = "1.25.0", features = ["full"] }
native-dialog = "0.6.3"
base64 = "0.21.0"
image-base64 = "0.1.0"

